# glam-traits

./: Cargo.toml  readme.md
codegen/: Cargo.toml
codegen/src/: main.rs
codegen/templates/: bvec.rs.tera  bvec_impl.rs.tera  vec.rs.tera  vec_impl.rs.tera
src/: bvec.rs  ext.rs  impl_bvec.rs  impl_vec.rs  lib.rs  vec.rs
src/bvec/: gbvec.rs  gbvec3.rs  gbvec4.rs
src/vec/: float.rs  gen.rs  int.rs  signed.rs  sint.rs  typed.rs  uint.rs
src/vec/float/: float_vec.rs  float_vec2.rs  float_vec3.rs  float_vec4.rs
src/vec/int/: int_vec.rs  int_vec2.rs  int_vec3.rs  int_vec4.rs
src/vec/signed/: signed_vec.rs  signed_vec2.rs  signed_vec3.rs  signed_vec4.rs
src/vec/sint/: sint_vec.rs  sint_vec2.rs  sint_vec3.rs  sint_vec4.rs
src/vec/typed/: f32_vec.rs  f64_vec.rs  i16_vec.rs  i32_vec.rs  i64_vec.rs  u16_vec.rs  u32_vec.rs  u64_vec.rs
src/vec/uint/: uint_vec.rs  uint_vec2.rs  uint_vec3.rs  uint_vec4.rs
