[package]
name = "glam-traits"
version = "0.1.1"
edition = "2021"
authors = ["Zane Jacobs"]
description = "Traits for the vectors in glam."
license = "MIT"
repository = "https://github.com/Ababwa/glam-traits"

[dependencies]
glam = { git = "https://github.com/bitshifter/glam-rs.git" }
num-traits = { version = "0.2.18", optional = true }

[features]
ext = ["dep:num-traits"]
