[package]
name = "glam-traits"
version = "0.1.3"
edition = "2021"
authors = ["Zane Jacobs"]
description = "Traits for the vectors in glam."
license = "MIT"
repository = "https://github.com/Ababwa/glam-traits"

[dependencies]
glam = "0.27.0"
num-traits = { version = "0.2.18", optional = true }

[features]
ext = ["dep:num-traits"]
